@@ -304,6 +304,9 @@
           <includes>
             <include>**/*Test.java</include>
           </includes>
+          <forkCount>3</forkCount>
+          <reuseForks>true</reuseForks>
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
       <plugin>
